--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
     "scripts": {
-        "cypress:open": "cypress open"
+        "cypress:open": "cypress open",
+        "cypress:run": "cypress run",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "analyze": "BUNDLE_ANALYZE=both next build",
+        "lint": "next lint",
+        "prettier-fix": "prettier --write .",
+        "find:unused": "npx next-unused"
     },
     "devDependencies": {
         "cypress": "^13.1.0"
